--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <br><br>
 
     <label><strong>Upload Resume (PDF):</strong></label><br>
-    <input type="file" name="resume" accept=".pdf" required>
+    <input type="file" name="resume" accept=".pdf" multiple required>
     <br><br>
 
     <button type="submit">Analyze Resume</button>
